--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,5 @@
+link_directories(../lib/SFML)
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} Functions Sorters)
-
-
+include_directories(../lib/SFML/include)
+target_link_libraries(${PROJECT_NAME} Functions Sorters SFML)
 
